horizontal scroll & searchbar fix

--- a/index.css
+++ b/index.css
@@ -62,9 +62,9 @@ header .search-wrap #searchbar {
     padding-left: min(3.5em, 8vw);
     font-family: 'Quicksand', sans-serif;
     font-size: 16px;
-    background: white url('/assets/icons/search-icon.svg') 1vw 50% no-repeat padding-box;
+    background: white url('assets/icons/search-icon.svg') 1vw 50% no-repeat padding-box;
     background-size: 25px 25px;
-    transition: box-shadow 0.3s linear;
+    transition: 0.3s linear;
 }
 
 header .search-wrap #searchbar::placeholder {
@@ -101,12 +101,6 @@ header .profile-wrap #profile-icon {
     border: 1px solid white;
 }
 
-@media screen and (max-width:480px) {
-    header.navbar {
-        height: fit-content;
-    }
-}
-
 /*------------------------------- Content -------------------------------*/
 
 .content {
@@ -115,6 +109,7 @@ header .profile-wrap #profile-icon {
 
 .content section {
     margin-bottom: 15px;
+    margin-right: 0;
 }
 
 .content section.welcome {
@@ -639,4 +634,28 @@ footer .footer-links .link-container .link {
 
 footer .footer-links .link-container img {
     height: 14px;
+}
+
+/*------------------------------- Media Queries -------------------------------*/
+
+@media screen and (max-width:480px) {
+    header.navbar {
+        padding-top: 10px;
+        height: fit-content;
+        width: 100vw;
+    }
+    header .search-wrap {
+        justify-content: flex-end;
+        margin-right: 12px;
+    }
+    header .search-wrap #searchbar:not(#searchbar:focus) {
+        width: 40px;
+        height: 40px;
+        padding-left: 10vw;
+        border-radius: 50%;
+        background-position-x: 1.5vw;
+    }
+    .content {
+        margin-top: 130px;
+    }
 }
